--- a/libft/Makefile
+++ b/libft/Makefile
@@ -20,8 +20,8 @@ SRC = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c \
 	  ft_atoi.c ft_calloc.c ft_strdup.c ft_putchar_fd.c \
 	  ft_putendl_fd.c ft_putnbr_fd.c ft_putstr_fd.c \
 	  ft_strjoin.c ft_substr.c ft_strtrim.c ft_itoa.c \
-	  ft_split.c ft_striteri.c ft_strmapi.c ft_printf.c \
-	  ft_printhex.c \
+	  ft_split.c ft_striteri.c ft_strmapi.c get_next_line.c \
+	  get_next_line_utils.c ft_printf.c ft_printhex.c \
 
 OBJ = $(SRC:.c=.o)
 
